# pytorch-predict-example

./: .gitignore  Dockerfile  README.md
load-and-predict/: predict.py  save.py
simple-predict/: predict.py
torchscript-cpp-predict/: python-load-predict.py  trace.py
torchscript-cpp-predict/example-app/: CMakeLists.txt  README.md  example-app.cpp  sample.cpp
